Icon cutoff fix

--- a/client/src/Menu.css
+++ b/client/src/Menu.css
@@ -2,8 +2,8 @@
     background-color: white;
     box-shadow: 0px 2px 24px 0px rgba(0, 0, 0, 0.15);
     border-radius: 8px;
-    width: 752px;
-    height: 80px;
+    width: 800px;
+    height: 120px;
     display: flex;
     justify-content: space-between;
     padding: 0 40px;
